--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     }
   },
   "require": {
-    "wumvi/utils.response": "v1.*"
+    "php": "^8.0",
+    "ext-json": "*",
+    "wumvi/utils.response": "v1.0.7"
   },
   "require-dev": {
-    "phpunit/phpunit": "9.2.2",
-    "squizlabs/php_codesniffer": "3.5.5",
-    "overtrue/phplint": "2.0.2",
-    "phpstan/phpstan": "0.12.28",
-    "phan/phan": "3.0.2"
+    "phpunit/phpunit": "9.5.5",
+    "overtrue/phplint": "8.0.x-dev",
+    "phan/phan": "4.0.6"
   },
   "scripts": {
     "phpstan": [
